[gd_scene load_steps=11 format=3 uid="uid://bba4lucungyjt"]

[ext_resource type="Texture2D" uid="uid://cfrdq7jidsww3" path="res://Assets/Sunnyland/sprites/item-feedback/item-feedback-3.png" id="1_lbjbt"]
[ext_resource type="Script" path="res://Scripts/next_level.gd" id="1_v3qfq"]
[ext_resource type="Texture2D" uid="uid://b8osfyanpjsk6" path="res://Assets/Sunnyland/sprites/item-feedback/item-feedback-1.png" id="2_r5tw7"]
[ext_resource type="Texture2D" uid="uid://dv6qvunf3hkvm" path="res://Assets/Sunnyland/sprites/item-feedback/item-feedback-2.png" id="3_svtod"]
[ext_resource type="Texture2D" uid="uid://dsp5qho311x5k" path="res://Assets/Sunnyland/sprites/item-feedback/item-feedback-4.png" id="5_tonc0"]
[ext_resource type="AudioStream" uid="uid://7qkauhr0mo1h" path="res://Assets/SFX/levelTransition.wav" id="6_1vd7g"]
[ext_resource type="Texture2D" uid="uid://4j7foyapb60h" path="res://Assets/Sprites/lock/lock.PNG" id="6_tctx6"]
[ext_resource type="AudioStream" uid="uid://cufrd32r2qv4d" path="res://Assets/SFX/unlocked.mp3" id="8_cctf0"]

[sub_resource type="SpriteFrames" id="SpriteFrames_3cqao"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_r5tw7")
}, {
"duration": 1.0,
"texture": ExtResource("3_svtod")
}, {
"duration": 1.0,
"texture": ExtResource("1_lbjbt")
}, {
"duration": 1.0,
"texture": ExtResource("5_tonc0")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_ubc8k"]
radius = 17.0294

[node name="Transition" type="Area2D"]
collision_layer = 2
collision_mask = 2
script = ExtResource("1_v3qfq")

[node name="ExitPortal" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_3cqao")
autoplay = "default"
frame_progress = 0.246458

[node name="EncryptionLock" type="Sprite2D" parent="."]
position = Vector2(-1, -1)
texture = ExtResource("6_tctx6")
offset = Vector2(2.405, -2.425)

[node name="EncryptionLock2" type="Sprite2D" parent="EncryptionLock"]
modulate = Color(0, 0, 0, 1)
z_index = -1
position = Vector2(2, 2)
texture = ExtResource("6_tctx6")
offset = Vector2(2.405, -2.425)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_ubc8k")

[node name="FadeTimer" type="Timer" parent="."]

[node name="SFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_1vd7g")
volume_db = -2.213
bus = &"SFX"

[node name="UnlockedSFX" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("8_cctf0")
max_distance = 20000.0
panning_strength = 2.0
bus = &"SFX"

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="FadeTimer" to="." method="_on_fade_timer_timeout"]
